<resources>
    <string name="app_name">PayParking</string>

    <string name="navigation_drawer_open">Abrir Menú</string>
    <string name="navigation_drawer_close">Cerrar Menú</string>

    <string name="title_activity_login">PayParking</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">La Dirección de Email no es Válida</string>
    <string name="error_invalid_password">La Contraseña es Muy Corta</string>
    <string name="error_incorrect_password">La Contraseña no es Correcta</string>
    <string name="error_field_required">Campo Requerido</string>
    <string name="permission_rationale">"Permisos Sobre la Agenda de Contactos son Necesarios para Proveer Atocompletado."
    </string>
    <!-- Parkings -->
    <string name="title_comprar_parkings">Recargar Parkings</string>
    <string name="title_recargas_parkings">Mis Recargas</string>
    <string name="title_saldo_parkings">Saldo Parkings</string>
    <!-- Pagos -->
    <string name="title_activity_checkin">Registrar Entrada</string>
    <string name="title_activity_payment">Pagar</string>
    <string name="title_pago_list">Mis Pagos</string>
    <string name="title_pago_detail">Detalle de Pago</string>
    <string name="title_pago">Esta es la Liquidación de tu Pago</string>
    <string name="title_realizar_pago">Realizar Pago</string>
    <string name="title_declinar_pago">Declinar Pago</string>
    <!-- Medios de Pago -->
    <string name="title_tarjeta_list">Medios de Pago</string>
    <string name="title_tarjeta_detail">Detalle de Tarjeta</string>
    <!-- Parqueaderos -->
    <string name="title_activity_maps">Parqueaderos</string>
    <!-- Personal -->
    <string name="title_activity_personal_data">Mis Datos Personales</string>
    <!-- Sesión -->
    <string name="action_inicio_sesion">Iniciar Sesión</string>
    <string name="title_salir">Salir</string>
    <!-- Comunicarse -->
    <string name="title_contactenos">Comunícate</string>
    <string name="title_compartir">Compartir</string>
    <string name="title_comunicarse">Hablemos</string>
    <!-- Liquidación -->
    <string name="title_liq_usuario">Usuario</string>
    <string name="title_liq_entrada">Fecha Entrada</string>
    <string name="title_liq_salida">Fecha Salida</string>
    <string name="title_liq_tiempo">Minutos</string>
    <string name="title_liq_vlr_unidad">Valor Minuto</string>
    <string name="title_liq_subtotal">Subtotal</string>
    <string name="title_liq_descuento">Descuento</string>
    <string name="title_liq_impuestos">Impuestos</string>
    <string name="title_liq_total">Total</string>
    <string name="title_liq_parqueadero">Parqueadero</string>
    <!-- Entrada -->
    <string name="title_checkin">Datos de Entrada</string>
    <string name="title_gen_qr_checkin">Generar Entrada</string>
    <string name="title_declinar_checkin">Declinar Entrada</string>

    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <string name="facebook_app_id">301290933540170</string>
    <string name="facebook_login_button_text">Continuar con Facebook</string>
</resources>
