<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.soaconsultingonline.fastparking.activity.LoginActivity"
    android:background="@drawable/background_hdpi"
    android:baselineAligned="false">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/payparking_logo_titulo"
            android:layout_gravity="center_horizontal|top" />

        <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/abc_action_bar_stacked_max_height"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
            android:layout_marginBottom="10dp" />

        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/abc_action_bar_stacked_max_height"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_inicio_sesion"
            android:textStyle="bold"
            android:background="@drawable/btn_rounded"
            android:layout_marginBottom="10dp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="12sp"
            android:paddingBottom="12sp"
            android:layout_marginBottom="10dp"
            android:text="@string/facebook_login_button_text"
            android:layout_weight="0.31" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/abc_action_bar_stacked_max_height"
            android:id="@+id/info"
            android:textSize="18sp"
            />

    </LinearLayout>
</RelativeLayout>
