<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.soaconsultingonline.fastparking.activity.CheckinActivity"
    tools:showIn="@layout/activity_checkin"
    android:background="@drawable/background_hdpi">

    <TextView
        android:id="@+id/scanTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/title_checkin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/browser_actions_text_color"
        android:textStyle="bold" />

    <include
        android:id="@+id/include_content_checkin"
        layout="@layout/content_checkin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scanTextView" />

    <Button
        android:id="@+id/aceptCheckinButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include_content_checkin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_rounded"
        android:text="@string/title_gen_qr_checkin" />

    <Button
        android:id="@+id/cancelCheckinButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aceptCheckinButton"
        android:background="@drawable/btn_rounded"
        android:text="@string/title_declinar_checkin" />

    <ImageView
        android:id="@+id/imgResultQr"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/cancelCheckinButton" />

</RelativeLayout>
